Geometry Nodes: Crash when hovering over socket. #92030

Closed
opened 2021-10-08 03:51:50 +02:00 by Valera Barashkov · 14 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: 26dac33ce1
Caused by 9f0a3a99ab

Short description of error
Crash when hover over socket, see image below.

Exact steps for others to reproduce the error
Open attached blend file.
Move mouse position to the socket location in red and Blender should crash (does every time for me, might have to wait a couple seconds).
Screenshot 2021-10-07 214734.png

fields_crash.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: `26dac33ce1` Caused by 9f0a3a99ab **Short description of error** Crash when hover over socket, see image below. **Exact steps for others to reproduce the error** Open attached blend file. Move mouse position to the socket location in red and Blender should crash (does every time for me, might have to wait a couple seconds). ![Screenshot 2021-10-07 214734.png](https://archive.blender.org/developer/F10861172/Screenshot_2021-10-07_214734.png) [fields_crash.blend](https://archive.blender.org/developer/F10861151/fields_crash.blend)

Added subscriber: @valera-8

Added subscriber: @valera-8
Member

Added subscribers: @HooglyBoogly, @Alaska

Added subscribers: @HooglyBoogly, @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm.

CC @HooglyBoogly as the culprit commit for this file is 9f0a3a99ab

System Information
Operating system: Linux-5.14.0-1-amd64-x86_64-with-glibc2.32 64 Bit

Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-10-08 02:23, hash: de07bf2b13

I can confirm. CC @HooglyBoogly as the culprit commit for this file is 9f0a3a99ab **System Information** Operating system: Linux-5.14.0-1-amd64-x86_64-with-glibc2.32 64 Bit Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-10-08 02:23, hash: `de07bf2b13`
neinstein commented 2021-10-08 05:21:06 +02:00 (Migrated from localhost:3001)

Added subscriber: @neinstein

Added subscriber: @neinstein
neinstein commented 2021-10-08 05:21:06 +02:00 (Migrated from localhost:3001)

This comment was removed by @neinstein

*This comment was removed by @neinstein*

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by 5e8775a8da

This issue was referenced by 5e8775a8da93292a6d8ef0eed3b89dea40c94399
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-10-14 18:05:10 +02:00
packersmoverclick commented 2022-01-31 09:47:58 +01:00 (Migrated from localhost:3001)

Added subscriber: @packersmoverclick

Added subscriber: @packersmoverclick
packersmoverclick commented 2022-01-31 09:47:58 +01:00 (Migrated from localhost:3001)

This comment was removed by @packersmoverclick

*This comment was removed by @packersmoverclick*
stimbrushes commented 2022-08-20 15:08:12 +02:00 (Migrated from localhost:3001)

Added subscriber: @stimbrushes

Added subscriber: @stimbrushes
stimbrushes commented 2022-08-20 15:08:12 +02:00 (Migrated from localhost:3001)

This comment was removed by @stimbrushes

*This comment was removed by @stimbrushes*

Added subscriber: @brecht

Added subscriber: @brecht
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92030
No description provided.