Fix T92030: crash when hovering over socket

This is the same fix as in rB24a965bb16c22e33752dfb6c22105b96a8649aeb.